fix grid for mobile, specificy spacing

--- a/assets/sass/05-blocks/preformatted/_style.scss
+++ b/assets/sass/05-blocks/preformatted/_style.scss
@@ -11,7 +11,7 @@ pre.wp-block-preformatted {
   &--splash {
     display: grid;
     grid-template-rows: auto auto auto;
-    grid-template-columns: 0px 0px repeat(12, 1fr) 0px 0px;
+    grid-template-columns: 0px 0px repeat(8, 1fr) 0px 0px;
     grid-gap: 10px 0px;
     @include media(desktop) {
       grid-template-columns: repeat(12, 1fr);
@@ -88,7 +88,7 @@ pre.wp-block-preformatted {
           margin-top: 0;
           margin-bottom: 0;
           font-size: 5.4rem;
-          letter-spacing: 0.12rem;
+          letter-spacing: 0.1rem;
           line-height: 0.85;
           font-size: clamp(2rem, 4.8vw, 6rem);
         }
