--- a/style.css
+++ b/style.css
@@ -2860,8 +2860,8 @@ pre.wp-block-preformatted {
   display: grid;
   -ms-grid-rows: auto auto auto;
       grid-template-rows: auto auto auto;
-  -ms-grid-columns: 0px 0px (1fr)[12] 0px 0px;
-      grid-template-columns: 0px 0px repeat(12, 1fr) 0px 0px;
+  -ms-grid-columns: 0px 0px (1fr)[8] 0px 0px;
+      grid-template-columns: 0px 0px repeat(8, 1fr) 0px 0px;
   grid-gap: 10px 0px;
 }
 
@@ -2993,7 +2993,7 @@ pre.wp-block-preformatted {
   margin-top: 0;
   margin-bottom: 0;
   font-size: 5.4rem;
-  letter-spacing: 0.12rem;
+  letter-spacing: 0.1rem;
   line-height: 0.85;
   font-size: clamp(2rem, 4.8vw, 6rem);
 }
